GNOME Bugzilla – Bug 757825
ivfparse: Fix the wrong width & height parsing of vp9 bitstream
Last modified: 2015-11-11 14:31:41 UTC
Created attachment 315130 [details] [review] ivfparse: Fix the wrong width & height parsing of vp9 bitstream The current implementation for detecting the resolution changes on key frames is based on vp8 bitstream alignment. Avoid this width and height parsing for vp9 bitstream, which requires proper frame header parsing in order to detect the resolution change.
Attachment 315130 [details] pushed as c3b2870 - ivfparse: Fix the wrong width & height parsing of vp9 bitstream